--- a/assets/html/ask.html
+++ b/assets/html/ask.html
@@ -37,7 +37,7 @@
                         <div class="field">
                             <label for="question"><h2>Your question</h2></label>
                             <textarea name="question" id="question" rows="1"></textarea>
-                            <h2>Сhoose one book</h2>
+                            <h2>Choose one book</h2>
                         </div>
                         <div class="field">
                             <div id="gallery" class="gallery style2 small onscroll-fade-in">
@@ -45,7 +45,7 @@
                         </div>
 
                         <div class="field">
-                            <label for="volume-control"><h2>Сhoose row in book</h2></label>
+                            <label for="volume-control"><h2>Choose a row in the book</h2></label>
                             <input type="range" id="volume-control" style="width: 60%;">
                             <output for="volume-control" class="output" id="box-range"></output>
                         </div>
@@ -76,44 +76,41 @@
         )
     }
 
-    $(document).ready(function () {
-        $.ajax({
-            url: '/api/v1/users/questions/ask',
-            type: 'get',
-            dataType: 'json',
-            success: function (data) {
-                console.log(data);
-                data["books"].forEach(function (element) {
-                    console.log(element);
-                    addArticle("/static/images/book2.jpg", element["Name"], element["Rows"])
-                });
+    $.ajax({
+        url: '/api/v1/users/questions/ask',
+        type: 'get',
+        dataType: 'json',
+        async: false,
+        success: function (data) {
+            console.log(data);
+            var booksname = ["/static/images/book1.jpg", "/static/images/book2.jpg", "/static/images/book3.jpg", "/static/images/book4.jpg"]
+            var i = 0;
+            data["books"].forEach(function (element) {
+                console.log(element);
+                addArticle(booksname[i], element["Name"], element["Rows"]);
+                i = i + 1;
+            });
 
-                $('article').click(ev => {
-                    $('article>img').removeClass("stylebook")
-                    $(ev.target).addClass("stylebook")
-                    $("#volume-control").attr("max", $(ev.target).attr("x-len"))
-                    $("#volume-control").val($("#volume-control").attr("max") / 2).trigger("input")
-                });
-            },
-            error: function (data) {
-                console.log(data)
-            }
-        });
+            $('article').click(ev => {
+                $('article>img').removeClass("stylebook")
+                $(ev.target).addClass("stylebook")
+                $("#volume-control").attr("max", $(ev.target).attr("x-len"))
+                $("#volume-control").val($("#volume-control").attr("max") / 2).trigger("input")
+            });
+        },
+        error: function (data) {
+            console.log(data)
+        }
     });
 </script>
 
-<script src="/static/js/browser.min.js"></script>
-<script src="/static/js/breakpoints.min.js"></script>
-<script src="/static/js/util.js"></script>
-<script src="/static/js/main.js"></script>
-
 <script lang="JavaScript">
     $(document).ready(function () {
-       $('#volume-control').on("input", function () {
+        $('#volume-control').on("input", function () {
             $('#box-range').val(this.value);
         }).trigger("change");
 
-        $('#ask').click(function() {
+        $('#ask').click(function () {
             $.ajax({
                 url: '/api/v1/users/questions/ask',
                 type: 'post',
@@ -137,6 +134,13 @@
     })
 
 </script>
+
+
+<script src="/static/js/browser.min.js"></script>
+<script src="/static/js/breakpoints.min.js"></script>
+<script src="/static/js/util.js"></script>
+<script src="/static/js/main.js"></script>
+
 
 </body>
 </html>
