add word break on html

--- a/assets/html/answer.html
+++ b/assets/html/answer.html
@@ -21,6 +21,9 @@
             width: 100%;
             background-size: cover;
         }
+        h3 {
+            word-break: break-all;
+        }
     </style>
 </head>
 <body class="is-preload outer">
