--- a/assets/html/questions.html
+++ b/assets/html/questions.html
@@ -20,6 +20,9 @@
             background-size: cover;
             position: relative;
         }
+        dt {
+            word-break: break-all;
+        }
     </style>
     <style>
         .layer {
