--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -22,6 +22,9 @@
             width: 100%;
             background-size: cover;
         }
+        span {
+            word-break: break-all;
+        }
     </style>
 </head>
 <body class="is-preload outer">
@@ -33,7 +36,7 @@
     <section class="wrapper style1 align-center heightmax padding-small">
         <div class="inner heightmax">
             <h1>You are awesome!</h1>
-            <h2>Here, your token: <span id="token"></span></h2>
+            <h2>Here, your token: <br> <span id="token"></span></h2>
             <ul class="actions stacked fit">
                 <li><a id="copybutton" class="button styleb fit">Copy your token</a></li>
                 <li><a href="/homepage" class="button styleb fit">Go to magic</a></li>
