--- a/services/fortuneteller/assets/html/cuteregister.html
+++ b/services/fortuneteller/assets/html/cuteregister.html
@@ -47,7 +47,7 @@
 </div>
 </body>
 
-<script src="/static/js/jquery-3.6.0.min.js"></script>
+<script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/hacks.js"></script>
 
 <script type="text/javascript">
