--- a/services/fortuneteller/assets/html/questions.html
+++ b/services/fortuneteller/assets/html/questions.html
@@ -70,7 +70,12 @@
 <script src="/static/js/util.js"></script>
 <script src="/static/js/main.js"></script>
 
-
+<script>
+    let isNotLoggedIn = document.cookie.indexOf('tokencookie=') === -1;
+    if (isNotLoggedIn) {
+        window.location.href = '/cuteregister';
+    }
+</script>
 
 <script>
     $(document).ready(function () {
