--- a/services/fortuneteller/assets/html/users.html
+++ b/services/fortuneteller/assets/html/users.html
@@ -66,6 +66,13 @@
 <script src="/static/js/main.js"></script>
 
 <script>
+    let isNotLoggedIn = document.cookie.indexOf('tokencookie=') === -1;
+    if (isNotLoggedIn) {
+        window.location.href = '/cuteregister';
+    }
+</script>
+
+<script>
     $(document).ready(function () {
         $.ajax({
             url: '/api/v1/users',
