--- a/services/fortuneteller/assets/html/questions.html
+++ b/services/fortuneteller/assets/html/questions.html
@@ -88,7 +88,7 @@
             type: 'get',
             dataType: 'json',
             data: {
-                "username": window.location.hash.slice(1),
+                "username": decodeURI(window.location.hash.slice(1)),
             },
             success: function (data) {
                 data['questions'].forEach(function (el) {
