--- a/services/fortuneteller/assets/html/register.html
+++ b/services/fortuneteller/assets/html/register.html
@@ -66,7 +66,7 @@
     }
 
     $(document).ready(function () {
-        $('#token').text(window.location.hash.slice(1))
+        $('#token').text(decodeURI(window.location.hash.slice(1)))
 
         $('#copybutton').click(function () {
            copyToClipboard($('#token'))
